@@ -67,8 +67,6 @@
 /** \def sei()
     \ingroup avr_interrupts
 
-    \code #include <avr/interrupt.h> \endcode
-
     Enables interrupts by setting the global interrupt mask. This function
     actually compiles into a single line of assembly, so there is no function
     call overhead.  However, the macro also implies a <i>memory barrier</i>
@@ -86,8 +84,6 @@
 #if defined(__DOXYGEN__)
 /** \def cli()
     \ingroup avr_interrupts
-
-    \code #include <avr/interrupt.h> \endcode
 
     Disables all interrupts by clearing the global interrupt mask. This function
     actually compiles into a single line of assembly, so there is no function
@@ -110,8 +106,6 @@
 #if defined(__DOXYGEN__)
 /** \def ISR(vector [, attributes])
     \ingroup avr_interrupts
-
-    \code #include <avr/interrupt.h> \endcode
 
     Introduces an interrupt handler function (interrupt service
     routine) that runs with global interrupts initially disabled
@@ -153,8 +147,6 @@
 /** \def SIGNAL(vector)
     \ingroup avr_interrupts
 
-    \code #include <avr/interrupt.h> \endcode
-
     Introduces an interrupt handler function that runs with global interrupts
     initially disabled.
 
@@ -180,8 +172,6 @@
 /** \def EMPTY_INTERRUPT(vector)
     \ingroup avr_interrupts
 
-    \code #include <avr/interrupt.h> \endcode
-
     Defines an empty interrupt handler function. This will not generate
     any prolog or epilog code and will only return from the ISR. Do not
     define a function body as this will define it for you.
@@ -206,8 +196,6 @@
 /** \def ISR_ALIAS(vector, target_vector)
     \ingroup avr_interrupts
 
-    \code #include <avr/interrupt.h> \endcode
-
     Aliases a given vector to another one in the same manner as the
     ISR_ALIASOF attribute for the ISR() macro. Unlike the ISR_ALIASOF
     attribute macro however, this is compatible for all versions of
@@ -231,6 +219,7 @@
 
     ISR_ALIAS(INT1_vect, INT0_vect);
     \endcode 
+    
 */
 #  define ISR_ALIAS(vector, target_vector)
 #else /* real code */
@@ -262,8 +251,6 @@
 #if defined(__DOXYGEN__)
 /** \def reti()
     \ingroup avr_interrupts
-
-    \code #include <avr/interrupt.h> \endcode
 
     Returns from an interrupt routine, enabling global interrupts. This should
     be the last command executed before leaving an ISR defined with the ISR_NAKED
@@ -299,8 +286,6 @@
 /** \def ISR_BLOCK
     \ingroup avr_interrupts
 
-    \code# include <avr/interrupt.h> \endcode
-
     Identical to an ISR with no attributes specified. Global
     interrupts are initially disabled by the AVR hardware when
     entering the ISR, without the compiler modifying this state.
@@ -311,8 +296,6 @@
 
 /** \def ISR_NOBLOCK
     \ingroup avr_interrupts
-
-    \code# include <avr/interrupt.h> \endcode
 
     ISR runs with global interrupts initially enabled.  The interrupt
     enable flag is activated by the compiler as early as possible
@@ -331,8 +314,6 @@
 /** \def ISR_NAKED
     \ingroup avr_interrupts
 
-    \code# include <avr/interrupt.h> \endcode
-
     ISR is created with no prologue or epilogue code. The user code is
     responsible for preservation of the machine state including the
     SREG register, as well as placing a reti() at the end of the
@@ -344,8 +325,6 @@
 
 /** \def ISR_ALIASOF(target_vector)
     \ingroup avr_interrupts
-
-    \code#include <avr/interrupt.h>\endcode
 
     The ISR is linked to another ISR, specified by the vect parameter.
     This is compatible with GCC 4.2 and greater only.
